--- a/index.html
+++ b/index.html
@@ -8,27 +8,20 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gemini AI</title>
 </head>
 
 <body>
     <div class="container">
         <div class="head">
-            <h2>Gemini AI multi-turn conversations</h2>
+            <h2>Gemini AI </h2>
         </div>
         <div class="main-body">
-            <p  id="model" class="model" ></p>
-            <p class="role"></p>
-            <p class="model" ></p>
-            <p class="role"></p>
-            <p  class="model" ></p>
-            <p class="role"></p>
-            <p class="model" ></p>
-            <p class="role"></p>
+            <textarea  id="model" cols="30" rows="10"></textarea>
 
         </div>
         <div class="tail"> 
-            <input type="text" id="text"  class="text-field" placeholder="Search Here">
+            <input type="text" id="text"  class="text-field" placeholder="Search Here...">
             <button id="button" class="submit"><i class="fa-solid fa-paper-plane"></i></button>
         </div>
     </div>
